--- a/src/Components/Content/Message/MessageInfo/Message.module.css
+++ b/src/Components/Content/Message/MessageInfo/Message.module.css
@@ -1,3 +1,7 @@
+.message {
+    display: flex;
+    flex-direction: row;
+}
 .account {
     display: flex;
     flex-direction: row;
@@ -5,4 +9,13 @@
     align-self: center;
     width: 30%;
 
+}
+.dialogs {
+    color: white;
+    font-size: 20px;
+display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-bottom: 10px;
 }
