--- a/src/Components/Sidebar/Friends/Friends.module.css
+++ b/src/Components/Sidebar/Friends/Friends.module.css
@@ -8,19 +8,20 @@
 .avatars {
 
     border-radius: 100px;
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     object-fit:cover;
-    padding: 7px;
+    padding: 9px;
 
 }
 .text {
     font-size: 38px;
     color: white;
     padding: 5px;
-    text-align: center  ;
+    text-align: center;
     text-decoration: none;
-    margin-top: 80px;
+    margin-top: 40px;
+    margin-left: -10px;
     transition: all 0.3s ease;
 
 }
