--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 }
 
 .App-header {
+  width: 100%;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -19,4 +20,20 @@
 .App-link {
   color: #61dafb;
 }
+.App{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+.Header{
+width: 23%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 30px;
+  color: #282c34;
 
+}
