--- a/src/App.css
+++ b/src/App.css
@@ -6,25 +6,38 @@
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
+
+    height: 50px;
     animation: App-logo-spin infinite 20s linear;
+
+  }
+}
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
 
-.App-header {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-padding: 1em;
-  grid-auto-rows: minmax(100px, auto);
 
-  color: white;
-
-}
 
 .App-link {
   color: #61dafb;
 }
 .App{
+  grid-template-areas:
+  "H H"
+  "S C";
+  display: grid;
+
+  grid-template-rows: 50px 1fr;
+  grid-template-columns: 2fr 10fr;
+  grid-gap: 15px;
+  padding: 1em;
   background-color: #282c34;
+
   height: 1000px;
 
 }
@@ -54,16 +67,7 @@ padding: 1em;
   border: 1px solid white;
 
 }
-.Header{
-width: 23%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 30px;
-  color: #282c34;
 
-}
 .box {
   border-radius: 5px;
   border: 1px solid white;
@@ -77,4 +81,30 @@ width: 23%;
   padding: 1em;
   background: mediumpurple;
   border: 1px solid black;
+}
+.header_text {
+
+  color: white;
+}
+.Header {
+grid-area: H;
+align-self: start;
+  background: mediumpurple;
+
+
+
+}
+.header_text1{
+  padding: 10px;
+  text-align: center;
+}
+.Sidebar {
+  grid-area: S;
+  background: mediumpurple;
+
+}
+.Content{
+  grid-area: C;
+  background: red;
+
 }
