--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -3,17 +3,24 @@
     background-color: #1c1e23;
     border-radius: 6px;
 }
-.header_text1{
+
+.item a {
+
     font-size: 25px;
     color: white;
     margin-left: 20px;
     padding: 5px;
     text-align: start;
-}
-.text{
-    color: white;
     text-decoration: none;
-}
-.header_text{
     margin-top: 20px;
+    transition: all 0.3s ease;
+
+}
+.item a:hover{
+    color: #4ca2d7;
+
+}
+a[class="active"] {
+
+  color: #40c0de !important;
 }
