--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -12,7 +12,7 @@
     padding: 5px;
     text-align: start;
     text-decoration: none;
-    margin-top: 20px;
+    margin-top: 50px;
     transition: all 0.3s ease;
 
 }
@@ -23,4 +23,7 @@
 a[class="active"] {
 
   color: #40c0de !important;
+}
+.ItemFlex{
+    margin-top: 20px;
 }
