--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,49 @@
 
-*{
-  -ms-overflow-style: none;
+* {
+    -ms-overflow-style: none;
 }
+
 ::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
+
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+    .App-logo {
 
-    height: 50px;
-    animation: App-logo-spin infinite 20s linear;
+        height: 50px;
+        animation: App-logo-spin infinite 20s linear;
 
-  }
+    }
 }
+
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
-.App{
-  grid-template-areas:
+.App {
+    grid-template-areas:
   "H H"
   "S C";
-  display: grid;
-  grid-template-rows: 50px 1fr;
-  grid-template-columns: 2fr 10fr;
-  grid-column-gap: 10px;
-  grid-row-gap: 15px;
-  padding: 1em;
-  background-color: #282c34;
-  height: 100%;
+    display: grid;
+    grid-template-rows: 50px 1fr;
+    grid-template-columns: 2fr 10fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 15px;
+    padding: 1em;
+    background-color: #282c34;
+    height: 100%;
+}
+
+.app-wrapper-content {
+
+
+    grid-area: C;
+    background-color: #282c34;
+
+
 }
