--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -10,6 +10,10 @@
     padding: 5px;
     text-align: start;
 }
+.text{
+    color: white;
+    text-decoration: none;
+}
 .header_text{
     margin-top: 20px;
 }
