--- a/src/Components/Header/Login/Login.scss
+++ b/src/Components/Header/Login/Login.scss
@@ -6,73 +6,75 @@
     width: 100%;
     height: 90%;
     padding-right: 25px;
+
+    .TextLogin {
+        font-size: 40px;
+        font-weight: 200;
+        color: white;
+        margin-bottom: 20px;
+    }
+
+    .LoginBlock {
+        padding-right: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #1c1e23;
+        border-radius: 20px;
+        width: 40%;
+        height: 80%;
+        border: 1px solid #282c34;
+
+        .submit {
+            background-color: #01a41a;
+            border-radius: 10px;
+            width: 100%;
+            border: 0;
+        }
+
+        [title="Password"] {
+            color: white !important;
+            font-size: 20px !important;
+            margin-right: 30px;
+        }
+
+        [title="Username"] {
+            color: white !important;
+            font-size: 20px !important;
+            margin-right: 30px;
+        }
+
+        span {
+            color: white !important;
+        }
+
+        .input {
+            background-color: #1c1e23 !important;
+            border-radius: 7px;
+            color: white;
+
+            input {
+                background-color: #1c1e23 !important;
+                color: white !important;
+            }
+        }
+
+        .error {
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            color: red;
+            font-size: 17px;
+            margin-top: 10px;
+
+            .captcha {
+                padding: 10px;
+            }
+
+        }
+    }
 }
 
-.LoginBlock {
-    padding-right: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #1c1e23;
-    border-radius: 20px;
-    width: 40%;
-    height: 80%;
-    border: 1px solid #282c34;
-}
-
-[title="Username"] {
-    color: white !important;
-    font-size: 20px!important;
-    margin-right: 30px;
-}
-
-.submit{
-background-color: #01a41a;
-    border-radius: 10px;
-    width: 100%;
-    border: 0;
-}
-.captcha{
-    padding: 10px;
-}
-.error{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: red;
-    font-size: 17px;
-    margin-top: 10px;
-}
-.input {
-    background-color: #1c1e23 !important;
-    border-radius: 7px;
-    color: white;
-}
-
-.input input {
-    background-color: #1c1e23 !important;
-    color: white !important;
-}
-
-[title="Password"] {
-    color: white !important;
-    font-size: 20px!important;
-    margin-right: 30px;
-}
-
-.LoginBlock span {
-    color: white !important;
-}
-
-.Text {
-    font-size: 40px;
-    font-weight: 200;
-    color: white;
-    margin-bottom: 20px;
-}
-.ad{
-flex-direction: column;
-}
