--- a/src/Components/Content/Message/MessageInfo/MessageAccounts.scss
+++ b/src/Components/Content/Message/MessageInfo/MessageAccounts.scss
@@ -1,18 +1,18 @@
-.account {
+.accountMessage  {
     display: flex;
     flex-direction: row;
     align-self: center;
     padding: 7px;
 
 }
-.avatar {
+.avatarMessage {
 
-    border-radius: 100px;
+    border-radius: 15px;
     width: 50px;
     height: 50px;
     object-fit:cover;
 }
-.user {
+.userMessage  {
     font-size: 19px;
     display: flex;
     align-items: center;
