--- a/src/Components/Content/Profile/Profile.module.css
+++ b/src/Components/Content/Profile/Profile.module.css
@@ -17,7 +17,7 @@
     justify-content: flex-end;
     padding: 7px;
 }
-
+input::-webkit-input-placeholder {color: white; font-size: 17px; align-items: start}
 .blockPost {
     color: lightgray;
     padding: 10px;
@@ -25,7 +25,11 @@
     width: 80%;
     height: 70px;
 
+text-decoration: none;
     border-radius: 4px;
+    outline: none;
+    border: none;
+
 }
 
 .textPost {
