--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 * {
-    -ms-overflow-style: none;
+
 }
 
 ::-webkit-scrollbar {
@@ -36,7 +36,7 @@
     grid-row-gap: 15px;
     padding: 1em;
     background-color: #282c34;
-    height: 100%;
+    height: 1500px;
 }
 
 .app-wrapper-content {
