created add message by bll

--- a/src/Components/Content/Message/MessageInfo/Message.module.css
+++ b/src/Components/Content/Message/MessageInfo/Message.module.css
@@ -21,3 +21,19 @@ display: flex;
     margin-bottom: 10px;
     margin-right: 10%;
 }
+.postFlex {
+    width: 81%;
+    display: flex;
+    justify-content: flex-end;
+    padding: 7px;
+}
+.submit {
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: green;
+    width: 100px;
+    height: 40px;
+    border-radius: 4px;
+}
