--- a/src/Components/Content/Profile/ProfileInfo/PersonalData.module.css
+++ b/src/Components/Content/Profile/ProfileInfo/PersonalData.module.css
@@ -12,23 +12,33 @@
 }
 
 .text1 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+     color: white;
+     font-size: 30px;
+
+
+
+
+ }
+.text2 {
+    margin-left: 10px;
     color: white;
-    font-size: 30px;
-    margin-bottom: 10px;
+    font-size: 20px;
+    animation: super-rainbow 2s infinite linear;
 
 }
 
 .text {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     color: white;
     font-size: 20px;
     text-decoration: none;
 }
-.text a{
-    color: yellow ;
-    font-size: 20px;
-    text-decoration: none;
-    animation: super-rainbow 2s infinite linear;
-}
+
 
 @keyframes super-rainbow {
     0% {
