--- a/src/Components/Content/Users/Users.module.css
+++ b/src/Components/Content/Users/Users.module.css
@@ -70,6 +70,7 @@ margin: 1px;
     justify-content: center;
     align-items: center;
     color: black;
+    background-color: #a1a1a1;
     border: 0;
     padding: 0;
     font-size: 14px;
