--- a/src/Components/Content/Users/Users.module.css
+++ b/src/Components/Content/Users/Users.module.css
@@ -13,7 +13,7 @@
 
     padding: 10px;
     display: flex;
-    height: 65px;
+    height: 80px;
     justify-content: space-between;
     width: 85%;
     border-radius: 13px;
@@ -63,7 +63,7 @@
 
 }
 .followed{
-
+margin: 1px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -73,7 +73,7 @@
     font-weight: 500;
 border-radius: 6px;
     width: 80px;
-    height: 25px;
+    height: 30px;
 }
 .unfollowed{
     margin: 1px;
@@ -86,7 +86,7 @@ border-radius: 6px;
     font-size: 14px;
     border-radius: 6px;
     width: 80px;
-    height: 25px;
+    height: 30px;
 }
 
 .selected {
