created header container and login reducer

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,6 +1,14 @@
 .Header {
+
     grid-area: H;
     align-self: start;
     background-color: #1c1e23;
     border-radius: 4px;
+}
+.Login{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 98%;
 }
