--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -10,5 +10,24 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 98%;
+    width: 99%;
+}
+
+.avatar {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border-radius: 11px;
+
+}
+.info{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.name{
+    color: white;
+    font-size: 20px;
+    margin-right: 10px;
 }
