--- a/src/Components/Content/Users/Users.module.css
+++ b/src/Components/Content/Users/Users.module.css
@@ -63,12 +63,15 @@
 
 }
 .followed{
+
 margin: 1px;
+    outline: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    border: 1px solid #bdbdbd;
+    color: black;
+    border: 0;
+    padding: 0;
     font-size: 14px;
     font-weight: 500;
 border-radius: 6px;
@@ -76,6 +79,9 @@ border-radius: 6px;
     height: 30px;
 }
 .unfollowed{
+    border: 0;
+    padding: 0;
+    outline: 0 ;
     margin: 1px;
     display: flex;
     justify-content: center;
