--- a/src/Components/Header/Login/login.module.css
+++ b/src/Components/Header/Login/login.module.css
@@ -1,9 +1,58 @@
 .Login {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90%;
 
-    height: 50% !important;
-    background-color: red;
-    width: 50% !important;
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
+}
+
+.LoginBlock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #1c1e23;
+    border-radius: 20px;
+    width: 50%;
+    height: 60%;
+    border: 1px solid #282c34;
+}
+
+[title="Username"] {
+    color: white !important;
+
+}
+
+.submit{
+background-color: #01a41a;
+    border-radius: 10px;
+    width: 100%;
+    border: 0;
+}
+.input {
+    background-color: #1c1e23 !important;
+    border-radius: 7px;
+    color: white;
+}
+
+.input input {
+    background-color: #1c1e23 !important;
+    color: white !important;
+}
+
+[title="Password"] {
+    color: white !important;
+}
+
+span {
+    color: white !important;
+}
+
+.Text {
+    font-size: 30px;
+    font-weight: 200;
+    color: white;
+    margin-bottom: 20px;
 }
