--- a/src/Components/Header/Login/login.module.css
+++ b/src/Components/Header/Login/login.module.css
@@ -5,24 +5,26 @@
     align-items: center;
     width: 100%;
     height: 90%;
-
+    padding-right: 25px;
 }
 
 .LoginBlock {
+    padding-right: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: #1c1e23;
     border-radius: 20px;
-    width: 50%;
+    width: 40%;
     height: 60%;
     border: 1px solid #282c34;
 }
 
 [title="Username"] {
     color: white !important;
-
+    font-size: 20px!important;
+    margin-right: 30px;
 }
 
 .submit{
@@ -44,6 +46,8 @@ background-color: #01a41a;
 
 [title="Password"] {
     color: white !important;
+    font-size: 20px!important;
+    margin-right: 30px;
 }
 
 span {
@@ -51,7 +55,7 @@ span {
 }
 
 .Text {
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 200;
     color: white;
     margin-bottom: 20px;
