--- a/src/Components/Content/Profile/ProfileInfo/Status/status.module.css
+++ b/src/Components/Content/Profile/ProfileInfo/Status/status.module.css
@@ -16,6 +16,7 @@ margin-left: 25px;
   outline: 0;
   font-size: 25px;
   font-weight: 300;
+  width: 100%;
   color: #c0c0c0;
   border-radius: 7px;
 }
