--- a/src/common/Loading/Loading.module.css
+++ b/src/common/Loading/Loading.module.css
@@ -8,9 +8,13 @@
 }
 .img{
 
-    background-color: rgba(255, 0, 0, 0);
+    background-color: rgba(0, 255, 217, 0);
 }
 .loading1
 {
     width: 6%;
+}
+.skelet{
+    width: 100%;
+    height: 100%;
 }
