writed tests for users

--- a/src/Components/Content/Users/Users.module.css
+++ b/src/Components/Content/Users/Users.module.css
@@ -69,9 +69,9 @@ margin: 1px;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
-    background-color: #a1a1a1;
-    border: 0;
+    color: white;
+    background-color: rgba(161, 161, 161, 0);
+    border: 1px solid #a1a1a1;
     padding: 0;
     font-size: 14px;
     font-weight: 500;
