--- a/src/Components/Content/Message/MessageInfo/MessageAccounts.scss
+++ b/src/Components/Content/Message/MessageInfo/MessageAccounts.scss
@@ -1,25 +1,25 @@
-.profile {
-  .account-message {
+
+  .message__account {
     display: flex;
     flex-direction: row;
     align-self: center;
     padding: 7px;
 
-    .avatarMessage {
-      border-radius: 15px;
+
+    .message__avatar {
+      border-radius: 10px;
       width: 50px;
       height: 50px;
       object-fit: cover;
     }
 
-    .userMessage {
+    .message__user {
       font-size: 19px;
       display: flex;
       align-items: center;
-      width: 80%;
+      width: 100%;
       color: white;
       margin-left: 10px;
       text-decoration: none;
     }
   }
-}
