--- a/src/Components/Content/Profile/ProfileInfo/PersonalData.scss
+++ b/src/Components/Content/Profile/ProfileInfo/PersonalData.scss
@@ -1,43 +1,49 @@
-.account {
+//personal data
+.profile__account {
   padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-}
 
-.personalData {
-  margin-left: 30px;
-}
 
-.text1 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  color: white;
-  font-size: 25px;
-}
-.text2 {
-  margin-left: 10px;
-  color: white;
-  font-size: 20px;
-  animation: super-rainbow 2s infinite linear;
-}
+  .profile__personal-data-form {
+    margin-left: 30px;
 
-.text {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
+    .profile__personal-data-name {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      color: white;
+      font-size: 25px;
+      .profile__personal-data_text-name {
+        margin-left: 10px;
+        color: white;
+        font-size: 20px;
+        animation: super-rainbow 2s infinite linear;
+      }
+    }
 
-  color: white;
-  font-size: 20px;
-  text-decoration: none;
+    .profile__personal-data_text {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      color: white;
+      font-size: 20px;
+      text-decoration: none;
 }
+      .profile__personal-data_text-name {
+        margin-left: 10px;
+        color: white;
+        font-size: 20px;
+        animation: super-rainbow 2s infinite linear;
+      }
+    }
+  }
 
-.websites {
-  display: flex;
-  flex-direction: column;
-}
+
+
+//animation
 @keyframes super-rainbow {
   0% {
     color: #ff0000;
@@ -74,7 +80,7 @@
   }
 }
 
-.accountAvatar {
+.profile__account-avatar {
   height: 150px;
   border-radius: 400px;
 }
