--- a/src/Components/Content/Users/Users.scss
+++ b/src/Components/Content/Users/Users.scss
@@ -1,96 +1,95 @@
-.User-user {
+.user {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
   width: 65%;
   margin: 20px;
-}
 
-.UserInfo-user {
-  padding: 10px;
-  display: flex;
-  height: 95px;
-  justify-content: space-between;
-  width: 85%;
-  border-radius: 13px;
-  border: 2px solid #bdbdbd;
-  color: white;
-}
+  .user__avatar {
+    width: 75px;
+    height: 75px;
+    border-radius: 100px;
+    object-fit: cover;
+  }
 
-.avatar-user {
-  width: 75px;
-  height: 75px;
-  border-radius: 100px;
+  .user__followed {
+    margin: 1px;
+    outline: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: rgba(161, 161, 161, 0);
+    border: 1px solid #a1a1a1;
+    padding: 0;
+    font-size: 14px;
+    font-weight: 500;
+    border-radius: 6px;
+    width: 80px;
+    height: 30px;
+  }
 
-  object-fit: cover;
-}
+  .user__unfollowed {
+    border: 0;
+    padding: 0;
+    outline: 0;
+    margin: 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #4ca2d7;
+    font-weight: 500;
+    font-size: 14px;
+    border-radius: 6px;
+    width: 80px;
+    height: 30px;
+  }
 
-.left-user {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
+  .user__user-info {
+    padding: 10px;
+    display: flex;
+    height: 95px;
+    justify-content: space-between;
+    width: 85%;
+    border-radius: 13px;
+    border: 2px solid #bdbdbd;
+    color: white;
 
-.right-user {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-end;
-}
+    .user__left-side {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
 
-.nick {
-  font-size: 22px;
-}
+      .user__nick {
+        font-size: 22px;
+      }
 
-.status {
-  font-size: 15px;
-  color: #d7d7d7;
-}
+      .user__status {
+        font-size: 15px;
+        color: #d7d7d7;
+      }
+    }
 
-.city {
-  font-size: 18px;
-  font-weight: 100;
-}
+    .user__right-side {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-end;
 
-.country {
-  font-size: 18px;
-  font-weight: 100;
-}
-.followed {
-  margin: 1px;
-  outline: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  background-color: rgba(161, 161, 161, 0);
-  border: 1px solid #a1a1a1;
-  padding: 0;
-  font-size: 14px;
-  font-weight: 500;
-  border-radius: 6px;
-  width: 80px;
-  height: 30px;
-}
-.unfollowed {
-  border: 0;
-  padding: 0;
-  outline: 0;
-  margin: 1px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  background-color: #4ca2d7;
-  font-weight: 500;
-  font-size: 14px;
-  border-radius: 6px;
-  width: 80px;
-  height: 30px;
+      .user__city {
+        font-size: 18px;
+        font-weight: 100;
+      }
+    }
+  }
 }
 
 .selected {
   font-size: 15px;
   font-weight: 600;
+}
+.ant-pagination-item-ellipsis{
+  color: white!important;
 }
