created users reducer by redux-slice

--- a/src/Components/Content/Profile/ProfileInfo/Status/status.module.scss
+++ b/src/Components/Content/Profile/ProfileInfo/Status/status.module.scss
@@ -10,7 +10,7 @@ margin-left: 25px;
   font-weight: 300;
   margin-left: 3px;
 }
-.input{
+.input {
   background-color: rgba(0, 0, 0, 0);
   border: 1px solid #b4b4b4;
   outline: 0;
@@ -19,4 +19,8 @@ margin-left: 25px;
   width: 100%;
   color: #c0c0c0;
   border-radius: 7px;
+}
+
+.button {
+  background-color: white;
 }
