create slice reducer for user and tune loader for follow

--- a/src/common/Loading/Loading.scss
+++ b/src/common/Loading/Loading.scss
@@ -8,7 +8,11 @@
         width: 6%;
     }
 }
-
+.LoaderFollow{
+    background-color: rgba(0, 231, 194, 0);
+    width: 30px;
+    height: 30px;
+}
 
 .skeleton{
     width: 100%;
