--- a/src/Components/Content/Message/MessageInfo/MessageAccounts.scss
+++ b/src/Components/Content/Message/MessageInfo/MessageAccounts.scss
@@ -1,24 +1,28 @@
-.accountMessage  {
-    display: flex;
-    flex-direction: row;
-    align-self: center;
-    padding: 7px;
+.profile{
+    .account-message  {
 
-    .avatarMessage {
-
-        border-radius: 15px;
-        width: 50px;
-        height: 50px;
-        object-fit: cover;
-    }
-
-    .userMessage {
-        font-size: 19px;
         display: flex;
-        align-items: center;
-        width: 80%;
-        color: white;
-        margin-left: 10px;
-        text-decoration: none;
+        flex-direction: row;
+        align-self: center;
+        padding: 7px;
+
+        .avatarMessage {
+
+            border-radius: 15px;
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+        }
+
+        .userMessage {
+            font-size: 19px;
+            display: flex;
+            align-items: center;
+            width: 80%;
+            color: white;
+            margin-left: 10px;
+            text-decoration: none;
+        }
     }
+
 }
