--- a/src/Components/Content/Users/Users.scss
+++ b/src/Components/Content/Users/Users.scss
@@ -1,4 +1,4 @@
-.User {
+.User-user {
 
     display: flex;
     flex-direction: row;
@@ -9,7 +9,7 @@
 
 }
 
-.UserInfo {
+.UserInfo-user {
 
     padding: 10px;
     display: flex;
@@ -21,7 +21,7 @@
     color: white;
 }
 
-.avatar {
+.avatar-user {
     width: 75px;
     height: 75px;
     border-radius: 100px;
@@ -29,13 +29,13 @@
     object-fit: cover;
 }
 
-.left {
+.left-user {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.right {
+.right-user {
 
     display: flex;
     flex-direction: column;
