--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,25 +1,28 @@
-.Sidebar {
+.side-bar {
   grid-area: S;
   background-color: #1c1e23;
   border-radius: 6px;
-}
 
-.item a {
-  font-size: 27px;
-  color: white;
-  margin-left: 20px;
-  padding: 5px;
-  text-align: start;
-  text-decoration: none;
-  margin-top: 50px;
-  transition: all 0.3s ease;
-}
-.item a:hover {
-  color: #4ca2d7;
-}
-a[class="active"] {
-  color: #40c0de !important;
-}
-.ItemFlex {
-  margin-top: 20px;
+  .side-bar__items_flex {
+    margin-top: 20px;
+
+    .side-bar__item a {
+      font-size: 27px;
+      color: white;
+      margin-left: 20px;
+      padding: 5px;
+      text-align: start;
+      text-decoration: none;
+      margin-top: 50px;
+      transition: all 0.3s ease;
+
+      &:hover {
+        color: #4ca2d7;
+      }
+    }
+
+    a[class="active"] {
+      color: #40c0de !important;
+    }
+  }
 }
