--- a/src/Components/Content/Profile/ProfileInfo/Status/status.scss
+++ b/src/Components/Content/Profile/ProfileInfo/Status/status.scss
@@ -20,12 +20,18 @@ label {
 }
 
 .profile__edit_error-message {
-  width: 300px;
+  width: 370px;
+  border: 3px solid #ff0000;
   height: 100%;
-  border: 1px solid #9d9a9a;
-
   border-radius: 8px;
-  margin: 26px 0 0 30px
+  margin: 26px 0 0 30px;
+  box-shadow: 0 0 6px  #fc2a2a;
+}
+.profile__edit_error{
+  color: #9d9a9a !important;
+  font-weight: 300;
+  font-size: 20px;
+  padding: 10px;
 }
 
 .is-invalid {
