--- a/src/Components/Content/Profile/ProfileInfo/Status/status.scss
+++ b/src/Components/Content/Profile/ProfileInfo/Status/status.scss
@@ -1,11 +1,17 @@
 @use "/src/Components/Content/Profile/ProfileInfo/PersonalData";
-.test{
+.test {
   background-color: #01a41a;
 }
+
 .profile__edit_activated {
   display: flex;
   flex-direction: column;
   height: 100%;
+}
+
+.profile__edit-form {
+  display: flex;
+  flex-direction: row;
 }
 
 label {
@@ -13,11 +19,36 @@ label {
   /* Style as you please, it will become the visible UI component. */
 }
 
+.profile__edit_error-message {
+  width: 300px;
+  height: 100%;
+  border: 1px solid #9d9a9a;
+
+  border-radius: 8px;
+  margin: 26px 0 0 30px
+}
+
+.is-invalid {
+  border: 3px solid #fc2a2a !important;
+  margin: 0px 0 5px 8px !important;
+  color: #fc2a2a !important;
+
+}
+
+.error {
+  color: #fc2a2a;
+  font-weight: 400;
+  font-size: 16px;
+
+
+}
+
 #upload-photo {
   opacity: 0;
   position: absolute;
   z-index: -1;
 }
+
 .profile__edit {
   display: flex;
   flex-direction: column;
@@ -33,6 +64,7 @@ label {
 textarea{
   margin: 2px 2px 5px;
 }
+
   .profile__edit-input {
     display: flex;
     align-items: center;
@@ -46,6 +78,7 @@ textarea{
     color: #c0c0c0;
     border-radius: 6px;
     margin: 2px 2px 7px 10px;
+
     &:focus {
       border: 3px solid #00c4ff !important;
       margin: 0 0 5px 8px;
