--- a/src/Components/Header/Login/Login.scss
+++ b/src/Components/Header/Login/Login.scss
@@ -65,7 +65,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      color: red;
+      color: red!important;
       font-size: 17px;
       margin-top: 10px;
 
