--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   grid-area: H;
+  height: 55px;
   align-self: start;
   background-color: #1c1e23;
   border-radius: 4px;
@@ -22,6 +23,7 @@
   margin-right: 20px;
 }
 .login {
+  padding-left: 10px;
   font-size: 30px;
   color: white;
 }
@@ -29,6 +31,10 @@
   color: greenyellow !important;
 }
 .nlink {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   font-size: 30px;
   margin-right: 10px;
   color: white;
